<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="lk.macna.nawwa_mc.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_my_orders"
        android:name="lk.macna.nawwa_mc.ui.my_orders.MyOrdersFragment"
        android:label="@string/menu_my_orders"
        tools:layout="@layout/fragment_my_orders" />

    <fragment
        android:id="@+id/nav_cart"
        android:name="lk.macna.nawwa_mc.ui.cart.CartFragment"
        android:label="@string/menu_cart"
        tools:layout="@layout/fragment_cart" />

    <fragment
        android:id="@+id/nav_product"
        android:name="lk.macna.nawwa_mc.ui.product.ProductFragment"
        android:label="@string/menu_product"
        tools:layout="@layout/fragment_product" />

    <fragment
        android:id="@+id/nav_my_profile"
        android:name="lk.macna.nawwa_mc.ui.my_profile.MyProfileFragment"
        android:label="@string/menu_my_profile"
        tools:layout="@layout/fragment_my_profile" />

    <fragment
        android:id="@+id/nav_category"
        android:name="lk.macna.nawwa_mc.ui.category.CategoryFragment"
        android:label="@string/menu_category"
        tools:layout="@layout/fragment_category" />

<!--    <activity-->
<!--        android:id="@+id/nav_my_profile"-->
<!--        android:name="lk.macna.macna_mc.LoginActivity"-->
<!--        android:label="@string/app_name"-->
<!--        tools:layout="@layout/activity_login" />-->
</navigation>